// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": Immutable.Map {
      "fields": Immutable.Map {
        "first": Immutable.Map {
          "initial": Immutable.Map {
            "type": "text",
            "optional": false,
            "label": "First",
            "field": Object {
              "label": "First",
              "name": "fieldName.items.1.fields.first",
            },
            "value": "",
          },
          "current": Immutable.Map {
            "helperText": "",
            "error": false,
            "pristine": true,
            "touched": false,
            "value": "",
          },
        },
      },
    },
    "type": "addListItem",
  },
]
`;

exports[`add will trigger custom validation 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": Object {
      "error": true,
      "helperText": "i am error",
    },
    "type": "validationResult",
  },
]
`;

exports[`add will trigger validation 1`] = `
Array [
  Object {
    "fieldName": "colors.items.1.fields.shades.items.0.fields.shade",
    "payload": Object {
      "error": true,
      "helperText": "i am error",
    },
    "type": "validationResult",
  },
]
`;

exports[`add will trigger validation 2`] = `
Array [
  Immutable.List [
    Immutable.Map {
      "fields": Immutable.Map {
        "first": Immutable.Map {
          "initial": Immutable.Map {
            "type": "text",
            "label": "First",
            "field": "initialFirstField",
          },
          "current": Immutable.Map {
            "error": "false",
            "helperText": "",
            "value": "1",
          },
        },
        "second": Immutable.Map {
          "initial": Immutable.Map {
            "type": "text",
            "label": "Second",
            "field": "initialSecondField",
          },
          "current": Immutable.Map {
            "error": "false",
            "helperText": "",
            "value": "2",
          },
        },
      },
    },
    Immutable.Map {},
  ],
  "colors.1.shades.0.shade",
  "getAllValuesFunc",
]
`;

exports[`add with values 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": Immutable.Map {
      "fields": Immutable.Map {
        "first": Immutable.Map {
          "initial": Immutable.Map {
            "type": "text",
            "optional": false,
            "label": "First",
            "field": Object {
              "label": "First",
              "name": "fieldName.items.1.fields.first",
            },
            "value": "111",
          },
          "current": Immutable.Map {
            "helperText": "",
            "error": false,
            "pristine": true,
            "touched": false,
            "value": "111",
          },
        },
      },
    },
    "type": "addListItem",
  },
]
`;

exports[`remove 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": 1,
    "type": "removeListItem",
  },
]
`;

exports[`remove will trigger custom validation 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": Object {
      "error": true,
      "helperText": "i am error",
    },
    "type": "validationResult",
  },
]
`;

exports[`remove will trigger validation 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": Object {
      "error": false,
      "helperText": "",
    },
    "type": "validationResult",
  },
]
`;

exports[`returns props needed 1`] = `
Object {
  "props": Object {
    "add": [Function],
    "error": false,
    "helperText": "help me",
    "items": Array [
      Object {
        "first": Object {
          "error": "false",
          "helperText": "",
          "label": "First",
          "onBlur": [Function],
          "onChange": [Function],
          "value": "1",
        },
        "key": "fieldName.0",
        "second": Object {
          "error": "false",
          "helperText": "",
          "label": "Second",
          "onBlur": [Function],
          "onChange": [Function],
          "value": "2",
        },
      },
    ],
    "label": "the label",
    "remove": [Function],
    "updateIndex": [Function],
  },
  "setValue": [Function],
}
`;

exports[`updateIndex will dispatch action 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": Object {
      "fromIndex": 0,
      "toIndex": 4,
    },
    "type": "updateListIndex",
  },
]
`;
